clients/include/rocblas_fortran.hpp

rocblas_status rocblas_daxpy_fortran(rocblas_handle handle,
                                     const int      N,
                                     const double*  alpha,
                                     const double*  x,
                                     const int      incx,
                                     double*        y,
                                     const int      incy);
rocblas_status rocblas_caxpy_fortran(rocblas_handle               handle,
                                     const int                    N,
                                     const rocblas_float_complex* alpha,
                                     const rocblas_float_complex* x,
                                     const int                    incx,
                                     rocblas_float_complex*       y,
                                     const int                    incy);
rocblas_status rocblas_zaxpy_fortran(rocblas_handle                handle,
                                     const int                     N,
                                     const rocblas_double_complex* alpha,
                                     const rocblas_double_complex* x,
                                     const int                     incx,
                                     rocblas_double_complex*       y,
                                     const int                     incy);
// axpy_batched
rocblas_status rocblas_haxpy_batched_fortran(rocblas_handle            handle,
                                             const int                 N,
                                             const rocblas_half*       alpha,
                                             const rocblas_half* const x[],
                                             const int                 incx,
                                             rocblas_half* const       y[],
                                             const int                 incy,
                                             const int                 batch_count);
rocblas_status rocblas_saxpy_batched_fortran(rocblas_handle     handle,
                                             const int          N,
                                             const float*       alpha,
                                             const float* const x[],
                                             const int          incx,
                                             float* const       y[],
                                             const int          incy,
                                             const int          batch_count);
rocblas_status rocblas_saxpy_batched_fortran(rocblas_handle     handle,
                                             const int          N,
                                             const float*       alpha,
                                             const float* const x[],
                                             const int          incx,
                                             float* const       y[],
                                             const int          incy,
                                             const int          batch_count);
rocblas_status rocblas_daxpy_batched_fortran(rocblas_handle      handle,
                                             const int           N,
                                             const double*       alpha,
                                             const double* const x[],
                                             const int           incx,
                                             double* const       y[],
                                             const int           incy,
                                             const int           batch_count);
rocblas_status rocblas_caxpy_batched_fortran(rocblas_handle                     handle,
                                             const int                          N,
                                             const rocblas_float_complex*       alpha,
                                             const rocblas_float_complex* const x[],
                                             const int                          incx,
                                             rocblas_float_complex* const       y[],
                                             const int                          incy,
                                             const int                          batch_count);
rocblas_status rocblas_zaxpy_batched_fortran(rocblas_handle                      handle,
                                             const int                           N,
                                             const rocblas_double_complex*       alpha,
                                             const rocblas_double_complex* const x[],
                                             const int                           incx,
                                             rocblas_double_complex* const       y[],
                                             const int                           incy,
                                             const int                           batch_count);
// axpy_strided_batched
rocblas_status rocblas_haxpy_strided_batched_fortran(rocblas_handle       handle,
                                                     const int            N,
                                                     const rocblas_half*  alpha,
                                                     const rocblas_half*  x,
                                                     const int            incx,
                                                     const rocblas_stride stride_x,
                                                     rocblas_half*        y,
                                                     const int            incy,
                                                     const rocblas_stride stride_y,
                                                     const int            batch_count);
rocblas_status rocblas_saxpy_strided_batched_fortran(rocblas_handle       handle,
                                                     const int            N,
                                                     const float*         alpha,
                                                     const float*         x,
                                                     const int            incx,
                                                     const rocblas_stride stride_x,
                                                     float*               y,
                                                     const int            incy,
                                                     const rocblas_stride stride_y,
                                                     const int            batch_count);
rocblas_status rocblas_daxpy_strided_batched_fortran(rocblas_handle       handle,
                                                     const int            N,
                                                     const double*        alpha,
                                                     const double*        x,
                                                     const int            incx,
                                                     const rocblas_stride stride_x,
                                                     double*              y,
                                                     const int            incy,
                                                     const rocblas_stride stride_y,
                                                     const int            batch_count);
rocblas_status rocblas_caxpy_strided_batched_fortran(rocblas_handle               handle,
                                                     const int                    N,
                                                     const rocblas_float_complex* alpha,
                                                     const rocblas_float_complex* x,
                                                     const int                    incx,
                                                     const rocblas_stride         stride_x,
                                                     rocblas_float_complex*       y,
                                                     const int                    incy,
                                                     const rocblas_stride         stride_y,
                                                     const int                    batch_count);
rocblas_status rocblas_zaxpy_strided_batched_fortran(rocblas_handle                handle,
                                                     const int                     N,
                                                     const rocblas_double_complex* alpha,
                                                     const rocblas_double_complex* x,
                                                     const int                     incx,
                                                     const rocblas_stride          stride_x,
                                                     rocblas_double_complex*       y,
                                                     const int                     incy,
                                                     const rocblas_stride          stride_y,
                                                     const int                     batch_count);
// asum
rocblas_status rocblas_sasum_fortran(
    rocblas_handle handle, rocblas_int n, const float* x, rocblas_int incx, float* result);
rocblas_status rocblas_dasum_fortran(
    rocblas_handle handle, rocblas_int n, const double* x, rocblas_int incx, double* result);
rocblas_status rocblas_scasum_fortran(rocblas_handle               handle,
                                      rocblas_int                  n,
                                      const rocblas_float_complex* x,
                                      rocblas_int                  incx,
                                      float*                       result);
rocblas_status rocblas_dzasum_fortran(rocblas_handle                handle,
                                      rocblas_int                   n,
                                      const rocblas_double_complex* x,
                                      rocblas_int                   incx,
                                      double*                       result);